# zhinst-labber

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
Zurich_Instruments_HDAWG/: Zurich_Instruments_HDAWG.ini  Zurich_Instruments_HDAWG.py
Zurich_Instruments_MFLI/: Zurich_Instruments_MFLI.ini  Zurich_Instruments_MFLI.py
Zurich_Instruments_PQSC/: Zurich_Instruments_PQSC.ini  Zurich_Instruments_PQSC.py
Zurich_Instruments_SHFQA/: Zurich_Instruments_SHFQA.ini  Zurich_Instruments_SHFQA.py
Zurich_Instruments_SHFSG/: Zurich_Instruments_SHFSG.ini  Zurich_Instruments_SHFSG.py
Zurich_Instruments_UHFLI/: Zurich_Instruments_UHFLI.ini  Zurich_Instruments_UHFLI.py
Zurich_Instruments_UHFQA/: Zurich_Instruments_UHFQA.ini  Zurich_Instruments_UHFQA.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/features/: command_table.rst  index.rst  integration_weights.rst  logging.rst  modules.rst  sequencer_code.rst  wait_done.rst  waveforms.rst
docs/source/first_steps/: installation.rst  quickstart.rst
generator/: base_instrument.py  element.py  shfqa.py  shfsg.py
src/zhinst/labber/: __init__.py  base_instrument.py  cli_script.py  functions.py  (+3 more)
tests/: conftest.py  test_base.py  test_helper.py  test_settings_json.py
tests/data/: markers.csv  pulses.csv  test.json  wave_complex.csv  waves1.csv  waves2.csv
tests/generator/: test_cli_script.py  test_conf.py  test_generator.py  test_helpers.py  test_quants.py
tests/labber/: BaseDriver.py  InstrumentDriver_Interface.py
(+19 files in other folders)
