
[metadata]
name = zhinst-labber
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments Labber Driver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhinst/zhinst-labber
project_urls =
    Bug Tracker = https://github.com/zhinst/zhinst-labber/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
use_scm_version= True
install_requires =
    zhinst-toolkit>=0.3.2
    numpy>=1.16.5
    click>=8.0
    jinja2>=3.0
    natsort>=8.1
    black>=22.1
    autoflake>=1.4

include_package_data = True

[options.entry_points]
console_scripts =
    zhinst-labber = zhinst.labber.cli_script:main

[options.packages.find]
where = src
include = zhinst.*
